--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Timer</string>
     <string name="timer_text">10:00</string>
     <string name="start_button_text">start</string>
+    <string name="resetButtonText">reset</string>
 </resources>
